[package]
name = "polynomials"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle = "2.3"
byteorder = "1.3"
bitvec = "0.18.4"
rand_core = "0.5.1"
rand = "0.7.3"
ff = { version = "0.8", features = ["derive"] }
